feat(crust): Supported addition guard rule check for user details